--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':tangram')
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation project(':utauta')
 }
