--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation project(':tangram')
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation project(':utauta')
+    implementation project(':easy-dialog')
 }
